--- a/style.css
+++ b/style.css
@@ -18,8 +18,6 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    width: 1320px;
-    height: 600px;
     margin-top: 50px;
     margin-left: 100px;
     margin-right: 140px;
@@ -57,21 +55,107 @@ body {
     padding-top: 120px;
 
 }
-#off2{
-    
-font-size: 24px;
 
-font-weight: 500;
-padding-top: 48px;
+#off2 {
+
+    font-size: 24px;
+
+    font-weight: 500;
+    padding-top: 48px;
 
 }
 
-#off3{
+#off3 {
     color: #070211;
 
-font-size: 48px;
+    font-size: 48px;
 
-font-weight: 700;
+    font-weight: 700;
 
 
+}
+
+.imge {
+    padding-left: 350px;
+    padding-right: 395px;
+    padding-top: 50px;
+}
+
+.banner_2 {
+    border-radius: 16px;
+    background: linear-gradient(to right, #070211 0%, rgba(7, 2, 17, 0.00) 100%),
+        url(Vectorrr.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 1320px;
+    height: 600px;
+    margin-top: 70px;
+    margin-left: 100px;
+    margin-right: 140px;
+
+
+}
+
+#ban_text_1 {
+    color: #FFF;
+    font-family: Merriweather;
+    font-size: 64px;
+    font-weight: 900;
+    letter-spacing: 7.04px;
+    padding-top: 126px;
+
+
+}
+
+#ban_text_2 {
+    color: rgba(255, 255, 255, 0.80);
+    font-family: Inter;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    padding-top: 24px;
+
+
+}
+
+.ban_text {
+    padding-left: 126px;
+
+}
+
+#btn_primary {
+    border-radius: 8px;
+    background: #F00;
+    color: #FFF;
+    text-decoration: none;
+    border: #FFF;
+    
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 700;
+    padding: 16px 32px;
+
+
+
+}
+.btn{
+    padding-top: 30px;
+    padding-left: 135px;
+
+}
+
+.banner_2{
+    display: flex;
+}
+
+.year{
+    
+width: 319.83px;
+height: 464.662px;
+padding-top: 69px;
+padding-left: 45px;
+flex-direction: column;
+justify-content: center;
+align-items: center;
 }
