--- a/style.css
+++ b/style.css
@@ -140,8 +140,8 @@ body {
 
 }
 .btn{
-    padding-top: 30px;
-    padding-left: 135px;
+    padding-top: 50px;
+    padding-left: 30px;
 
 }
 
@@ -158,4 +158,31 @@ padding-left: 45px;
 flex-direction: column;
 justify-content: center;
 align-items: center;
+}
+
+.add{
+    border-radius: 16px;
+    background-image: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 1320px;
+    height: 600px;
+    margin-top: 70px;
+    margin-left: 100px;
+    margin-right: 140px;
+ 
+}
+.add_text{
+    color: #070211;
+font-family: Inter;
+font-size: 32px;
+font-weight: 600;
+text-align: center;
+padding-top: 100px;
+
+}
+
+.text_color{
+    color: #F00;
 }
