--- a/style.css
+++ b/style.css
@@ -186,3 +186,69 @@ padding-top: 100px;
 .text_color{
     color: #F00;
 }
+
+.gallary{
+    padding-left: 140px;
+    padding-bottom: 30px;
+
+}
+.glry_txt_1{
+    color: #F00;
+font-family: Inter;
+font-size: 24px;
+
+font-weight: 500;
+
+}
+.glry_txt_2{
+    color: #070211;
+font-family: Merriweather;
+font-size: 48px;
+
+font-weight: 900;
+
+}
+
+.glry_txt_3{
+    color: rgba(7, 2, 17, 0.60);
+font-family: Inter;
+font-size: 20px;
+font-weight: 400;
+
+}
+
+.gallary_pic{
+   padding-top: 48px;
+   border-radius: 16px;
+
+   
+}
+.gallary_pic_row{
+    padding-left: 24px;
+   
+   
+ 
+
+}
+.gallary_pic_row2{
+   
+   padding-top: 24px;
+  
+
+}
+
+.messg{
+    border-radius: 16px;
+    background-color: rgba(255, 0, 0, 0.05);
+    
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 1320px;
+    height: 600px;
+    margin-top: 70px;
+    margin-left: 100px;
+    margin-right: 140px;
+ 
+}
+
