--- a/style.css
+++ b/style.css
@@ -201,6 +201,7 @@ body {
     font-size: 24px;
 
     font-weight: 500;
+    p
 
 }
 
@@ -210,6 +211,7 @@ body {
     font-size: 48px;
 
     font-weight: 900;
+    padding-top:22px ;
 
 }
 
@@ -218,6 +220,7 @@ body {
     font-family: Inter;
     font-size: 20px;
     font-weight: 400;
+    padding-top: 22px;
 
 }
 
@@ -401,4 +404,33 @@ font-size: 24px;
 font-weight: 500;
 
 
+}
+.coming{
+    padding-left: 140px;
+    padding-bottom: 120px;
+    display: flex;
+    gap: 35px;
+
+
+}
+.bon_img{
+    border-radius: 364.844px;
+background: url(<path-to-image>), lightgray -91.279px 0px / 150.038% 100% no-repeat;
+width: 364.844px;
+height: 364.844px;
+}
+.bon_txt{
+    color: #F00;
+font-family: Inter;
+font-size: 48px;
+font-weight: 700;
+
+}
+.bon_img2{
+    width: 140px;
+height: 140px;
+}
+
+.bon_colo{
+    weight:;
 }
